feat(stripe): Complete F2.1 - Add Stripe dependency and configuration

--- a/ai_dev_bot_platform/.env.example
+++ b/ai_dev_bot_platform/.env.example
@@ -32,3 +32,6 @@ API_KEY_ENCRYPTION_KEY="a_very_strong_random_secret_key_32_bytes"
 # Cost Management
 PLATFORM_CREDIT_VALUE_USD="0.01" # 1 credit = $0.01
 MARKUP_FACTOR="1.5" # 50% markup
+# Stripe
+STRIPE_SECRET_KEY="sk_test_YOUR_KEY"
+STRIPE_WEBHOOK_SECRET="whsec_YOUR_KEY"
