--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -3,18 +3,26 @@ version: '3.8'
 services:
   app:
     build:
-      context: ../.. 
-      dockerfile: Dockerfile 
+      context: ../..
+      dockerfile: deploy/docker/Dockerfile
+      args:
+        - HTTP_PROXY=${HTTP_PROXY}
+        - HTTPS_PROXY=${HTTPS_PROXY}
+        - NO_PROXY=${NO_PROXY}
     ports:
-      - "8000:8000" 
+      - "8000:8000"
     volumes:
-      - ../../:/app 
+      - ../..:/app
     env_file:
-      - ../../.env 
+      - ../../.env
+    environment:
+      - HTTP_PROXY=${HTTP_PROXY}
+      - HTTPS_PROXY=${HTTPS_PROXY}
+      - NO_PROXY=${NO_PROXY}
     depends_on:
       - postgres
       - redis
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload 
+    command: uvicorn ai_dev_bot_platform.main:app --host 0.0.0.0 --port 8000 --reload
 
   postgres:
     image: postgres:17
