chore(config): Complete TODO F1.1 - Add new environment variables for Stripe and mocking

--- a/ai_dev_bot_platform/.env.example
+++ b/ai_dev_bot_platform/.env.example
@@ -35,3 +35,12 @@ MARKUP_FACTOR="1.5" # 50% markup
 # Stripe
 STRIPE_SECRET_KEY="sk_test_YOUR_KEY"
 STRIPE_WEBHOOK_SECRET="whsec_YOUR_KEY"
+
+# Set to 'true' to simulate successful payments without calling Stripe
+MOCK_STRIPE_PAYMENTS=true
+
+# Stripe Publishable Key (safe to expose in client-side code)
+STRIPE_PUBLISHABLE_KEY="pk_test_YOUR_KEY"
+
+# The base URL of your web application for Stripe redirects
+WEBAPP_URL=http://localhost:8000
