chore(config): Complete F1.2 - Add Supabase configuration variables

--- a/ai_dev_bot_platform/.env.example
+++ b/ai_dev_bot_platform/.env.example
@@ -44,3 +44,9 @@ STRIPE_PUBLISHABLE_KEY="pk_test_YOUR_KEY"
 
 # The base URL of your web application for Stripe redirects
 WEBAPP_URL=http://localhost:8000
+
+# Supabase Configuration
+# The URL for your Supabase project
+SUPABASE_URL=https://your-project-id.supabase.co
+# The 'service_role' key for backend operations (keep this secret)
+SUPABASE_KEY=your-supabase-service-role-key
