--- a/ai_dev_bot_platform/docker-compose.yml
+++ b/ai_dev_bot_platform/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   app:
     build:
-      context: ../..
-      dockerfile: deploy/docker/Dockerfile
+      context: .
+      dockerfile: Dockerfile
       args:
         - HTTP_PROXY=${HTTP_PROXY}
         - HTTPS_PROXY=${HTTPS_PROXY}
@@ -12,9 +12,9 @@ services:
     ports:
       - "8345:8000"
     volumes:
-      - ../..:/app
+      - ./:/app
     env_file:
-      - ../../.env
+      - .env
     environment:
       - HTTP_PROXY=${HTTP_PROXY}
       - HTTPS_PROXY=${HTTPS_PROXY}
