Fix: Set numpy version and add DATABASE_URL to docker-compose
This commit fixes an issue where the numpy version was not explicitly set, potentially leading to compatibility issues. It also adds the DATABASE_URL environment variable to the docker-compose file to ensure the application can connect to the database.

--- a/ai_dev_bot_platform/docker-compose.yml
+++ b/ai_dev_bot_platform/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     env_file:
       - .env
     environment:
+      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydb
       - HTTP_PROXY=${HTTP_PROXY}
       - HTTPS_PROXY=${HTTPS_PROXY}
       - NO_PROXY=${NO_PROXY}
