--- a/ai_dev_bot_platform/requirements.txt
+++ b/ai_dev_bot_platform/requirements.txt
@@ -15,7 +15,7 @@ python-dotenv # For local .env file loading
 # For Codebase Indexing
 sentence-transformers
 faiss-cpu
-numpy
+numpy==1.26.4
 alembic
 pytest
 pytest-mock
