--- a/ai_dev_bot_platform/alembic.ini
+++ b/ai_dev_bot_platform/alembic.ini
@@ -1,5 +1,5 @@
 [alembic]
-script_location = ai_dev_bot_platform/app/db/migrations
+script_location = app/db/migrations
 sqlalchemy.url = postgresql://user:password@host:port/dbname
 
 [loggers]
