--- a/ai_dev_bot_platform/docker-compose.yml
+++ b/ai_dev_bot_platform/docker-compose.yml
@@ -20,10 +20,11 @@ services:
       - HTTP_PROXY=${HTTP_PROXY}
       - HTTPS_PROXY=${HTTPS_PROXY}
       - NO_PROXY=${NO_PROXY}
+      - PYTHONPATH=/app
     depends_on:
       - postgres
       - redis
-    command: uvicorn ai_dev_bot_platform.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
   postgres:
     image: postgres:17
