--- a/deploy/docker/docker-compose.yml
+++ b/deploy/docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     depends_on:
       - postgres
       - redis
-    command: uvicorn ai_dev_bot_platform.main:app --host 0.0.0.0 --port 8345 --reload
+    command: uvicorn main:app --host 0.0.0.0 --port 8345 --reload
 
   postgres:
     image: postgres:17
