--- a/ai_dev_bot_platform/docker-compose.yml
+++ b/ai_dev_bot_platform/docker-compose.yml
@@ -16,17 +16,17 @@ services:
     env_file:
       - .env
     environment:
-      - DATABASE_URL=postgresql://myuser:mypassword@db:5432/mydb
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/ai_dev_bot
       - HTTP_PROXY=${HTTP_PROXY}
       - HTTPS_PROXY=${HTTPS_PROXY}
       - NO_PROXY=${NO_PROXY}
       - PYTHONPATH=/app
     depends_on:
-      - postgres
+      - db
       - redis
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
-  postgres:
+  db:
     image: postgres:17
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -35,14 +35,14 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5431:5432"
+      - "5430:5432"
 
   redis:
     image: redis:7
     volumes:
       - redis_data:/data
     ports:
-      - "6379:6379"
+      - "6375:6379"
 
 volumes:
   postgres_data:
