Refactor: Update model configurations and bot initialization
This commit updates the default models used by the AI development bot to `deepseek` models for architect, implementer, and verification roles, and `gemini-2.5-flash` for general use. This change aims to improve performance and cost-effectiveness.

Additionally, the Telegram bot initialization process was refactored to use `application.initialize()`, `application.start()`, and `application.updater.start_polling()` for better control and logging. The `.env` file creation in the Dockerfile was also commented out.

--- a/ai_dev_bot_platform/Dockerfile
+++ b/ai_dev_bot_platform/Dockerfile
@@ -20,7 +20,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Create a .env file from the example
-RUN cp .env.example .env
+# RUN cp .env.example .env
 
 # Expose the port the app runs on
 EXPOSE 8000
