Refactor: Remove CCT and related files, add new scripts and docs
This commit removes the Code Context Tool (CCT) and associated files, including the configuration, source code, and tests. This change is part of a larger refactoring effort.

Additionally, this commit introduces new shell scripts for setting up the virtual environment and running tests, along with new documentation files related to refactoring and requirements. It also updates the custom modes YAML file and various rules markdown files.

--- a/ai_dev_bot_platform/.env.example
+++ b/ai_dev_bot_platform/.env.example
@@ -1,52 +1,12 @@
-# Application
-APP_ENV="development" # development, staging, production
-LOG_LEVEL="INFO"
+# Database configuration
+POSTGRES_USER=your_postgres_user
+POSTGRES_PASSWORD=your_postgres_password
+POSTGRES_SERVER=your_postgres_host
+POSTGRES_PORT=your_postgres_port
+POSTGRES_DB=your_postgres_db_name
 
-# Database (PostgreSQL)
-POSTGRES_USER="your_db_user"
-POSTGRES_PASSWORD="your_db_password"
-POSTGRES_SERVER="localhost"
-POSTGRES_PORT="5432"
-POSTGRES_DB="ai_dev_bot"
-DATABASE_URL="postgresql://your_db_user:your_db_password@localhost:5432/ai_dev_bot"
+# Telegram bot token
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
-# Redis
-REDIS_HOST="localhost"
-REDIS_PORT="6379"
-REDIS_DB="0" # For Celery broker/backend and caching
-
-# Telegram
-TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN"
-
-# LLM API Keys
-## Google Gemini
-GOOGLE_API_KEY="YOUR_GOOGLE_GEMINI_API_KEY" # Or path to service account json
-# GOOGLE_APPLICATION_CREDENTIALS="/path/to/your/google_service_account.json"
-
-## OpenRouter
-OPENROUTER_API_KEY="YOUR_OPENROUTER_API_KEY"
-
-# API Key Manager (Encryption for stored keys if any)
-API_KEY_ENCRYPTION_KEY="a_very_strong_random_secret_key_32_bytes"
-
-# Cost Management
-PLATFORM_CREDIT_VALUE_USD="0.01" # 1 credit = $0.01
-MARKUP_FACTOR="1.5" # 50% markup
-# Stripe
-STRIPE_SECRET_KEY="sk_test_YOUR_KEY"
-STRIPE_WEBHOOK_SECRET="whsec_YOUR_KEY"
-
-# Set to 'true' to simulate successful payments without calling Stripe
-MOCK_STRIPE_PAYMENTS=true
-
-# Stripe Publishable Key (safe to expose in client-side code)
-STRIPE_PUBLISHABLE_KEY="pk_test_YOUR_KEY"
-
-# The base URL of your web application for Stripe redirects
-WEBAPP_URL=http://localhost:8000
-
-# Supabase Configuration
-# The URL for your Supabase project
-SUPABASE_URL=https://your-project-id.supabase.co
-# The 'service_role' key for backend operations (keep this secret)
-SUPABASE_KEY=your-supabase-service-role-key
+# Encryption key (generate a secure one for production)
+API_KEY_ENCRYPTION_KEY=your_secure_encryption_key_here
