--- a/project_manifest.json
+++ b/project_manifest.json
@@ -1,10 +1,10 @@
 {
   "project_root": "./ai_dev_bot_platform",
   "paths": {
-    "log_file": "logs/system_events.log",
+    "log极_file": "logs/system_events.log",
     "cct_config": ".cct_config.json",
     "work_items_dir": "work_items/",
-    "active_plan_file": "FIX_PLAN.md",
+    "active_plan_file": "todos/dev_todo_phase_1.md",
     "signal_files": {
       "needs_assistance": "NEEDS_ASSISTANCE.md",
       "needs_refactor": "NEEDS_REFACTOR.md",
