--- a/ai_dev_bot_platform/.env
+++ b/ai_dev_bot_platform/.env
@@ -1,12 +1,12 @@
 # Database configuration
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_SERVER=localhost
+POSTGRES_USER=real_postgres_user
+POSTGRES_PASSWORD=real_postgres_password
+POSTGRES_SERVER=real_postgres_host
 POSTGRES_PORT=5432
-POSTGRES_DB=ai_dev_bot
+POSTGRES_DB=real_postgres_db
 
 # Telegram bot token
-TELEGRAM_BOT_TOKEN=test_token
+TELEGRAM_BOT_TOKEN=123456:ABC-DEF1234ghIkl-mnOPQR567890xyz
 
 # Encryption key (generate a secure one for production)
-API_KEY_ENCRYPTION_KEY=test_encryption_key
+API_KEY_ENCRYPTION_KEY=65e7a0f7-1c3d-4b8e-8f2a-0e1b2c3d4e5f
