feat: Add proper User model tests and update requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
-qdrant-client
+fastapi
+uvicorn[standard]
+sqlalchemy
+psycopg2-binary
+redis
+python-telegram-bot
+pydantic
+pydantic-settings
+httpx
+google-generativeai
+python-dotenv
 sentence-transformers
-tree-sitter
-pytest-asyncio
+faiss-cpu
+numpy==1.26.4
+alembic
+pytest
+pytest-mock
+aider-chat
+stripe
+supabase
+email-validator
+prometheus-client
+qdrant-client
+celery[redis]
