build(docker): configure local development environment
Update Docker Compose and Dockerfile to streamline local development.

Database hostnames in .env and alembic.ini are now set to 'db' to
correctly resolve within the Docker network. The local .venv and .env
files are mounted into the application container, ensuring consistent
dependency management and environment variable loading without
rebuilding the image for every change. Dockerfile adjusted to leverage
the mounted .venv.

--- a/ai_dev_bot_platform/.env
+++ b/ai_dev_bot_platform/.env
@@ -1,12 +1,12 @@
 # Database configuration
 POSTGRES_USER=real_postgres_user
 POSTGRES_PASSWORD=real_postgres_password
-POSTGRES_SERVER=real_postgres_host
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_DB=real_postgres_db
 
 # Telegram bot token
-TELEGRAM_BOT_TOKEN=123456:ABC-DEF1234ghIkl-mnOPQR567890xyz
+TELEGRAM_BOT_TOKEN=8015987158:AAGNYmx7WSssHRHSd8MdcsYkZq6GGImo5uM
 
 # Encryption key (generate a secure one for production)
 API_KEY_ENCRYPTION_KEY=65e7a0f7-1c3d-4b8e-8f2a-0e1b2c3d4e5f
