--- a/ai_dev_bot_platform/alembic.ini
+++ b/ai_dev_bot_platform/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = app/db/migrations
-sqlalchemy.url = postgresql://user:password@host:port/dbname
+sqlalchemy.url = postgresql://real_postgres_user:real_postgres_password@db:5432/real_postgres_db
 
 [loggers]
 keys = root,sqlalchemy,alembic
