update the implementation

--- a/ai_dev_bot_platform/docker-compose.yml
+++ b/ai_dev_bot_platform/docker-compose.yml
@@ -19,11 +19,11 @@ services:
       - .env
      
     environment:
-     
       - HTTP_PROXY=${HTTP_PROXY}
       - HTTPS_PROXY=${HTTPS_PROXY}
       - NO_PROXY=${NO_PROXY}
       - PYTHONPATH=/app
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
     depends_on:
       - db
       - redis
