docs: P3.1: Update .env.example with missing Redis and LLM model variables

--- a/ai_dev_bot_platform/.env.example
+++ b/ai_dev_bot_platform/.env.example
@@ -10,3 +10,16 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
 # Encryption key (generate a secure one for production)
 API_KEY_ENCRYPTION_KEY=your_secure_encryption_key_here
+
+# Redis configuration
+REDIS_HOST=your_redis_host
+REDIS_PORT=6379
+REDIS_DB=0
+
+# LLM API keys and model configurations
+GOOGLE_API_KEY=your_google_api_key
+OPENROUTER_API_KEY=your_openrouter_api_key
+ARCHITECT_MODEL=gpt-4
+IMPLEMENTER_MODEL=gpt-3.5-turbo
+VERIFICATION_MODEL=gpt-4
+DEFAULT_GEMINI_MODEL=gemini-pro
