--- a/ai_dev_bot_platform/.env.example
+++ b/ai_dev_bot_platform/.env.example
@@ -23,3 +23,16 @@ ARCHITECT_MODEL=gpt-4
 IMPLEMENTER_MODEL=gpt-3.5-turbo
 VERIFICATION_MODEL=gpt-4
 DEFAULT_GEMINI_MODEL=gemini-pro
+
+# Payment processing (Stripe)
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+MOCK_STRIPE_PAYMENTS=false
+
+# File storage (Supabase)
+SUPABASE_URL=your_supabase_url
+SUPABASE_KEY=your_supabase_key
+
+# Web application URL
+WEBAPP_URL=http://localhost:3000
